--- a/dockerfiles/oj_web_server/requirements.txt
+++ b/dockerfiles/oj_web_server/requirements.txt
@@ -1,9 +1,9 @@
-django
+django==1.9.6
 MySQL-python
 redis
 django-redis-sessions
 djangorestframework
-django-rest-swagger
+django-rest-swagger==0.3.10
 gunicorn
 coverage
 django-extensions
